# brn_fun

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  findings.md  project_plan.md  pyproject.toml
analysis/: audusd_baseline_sanity.py  audusd_cooldown_maxbars.py  audusd_entry_timing_fine.py  audusd_ml.py  audusd_report.py  audusd_stops_trend.py  audusd_target_walkforward.py  hour_of_day.py  portfolio_ml.py  portfolio_ml_walkforward.py  rolling_atr_filter.py  rolling_check.py  spread_limit_sweep.py  sweep_m1.py  sweep_oos.py  year_profile.py
docs/audusd/: STRATEGY.md
src/brn_fun/: __init__.py  analyze.py  backtest.py  cli.py  config.py  db.py  levels.py  oanda.py  plot.py  reaction.py  strategy.py
src/brn_fun/live/: __init__.py  paper.py
src/brn_fun/ml/: __init__.py  features.py
tests/: test_analyze.py  test_backtest.py  test_db.py  test_paper.py  test_strategy.py
